Site do molusco

--- a/exercises/introducao-a-html-e-css_4/index.html
+++ b/exercises/introducao-a-html-e-css_4/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <h1>Soco a 80km/h: Conheça o Stomatopoda</h1>
-    <nav class="navigation">
+    <img src ="header.jpg" alt="Stomatopoda" width="500px">
+    <nav>
         <ul>
           <li><a href="">Página inicial</a></li> 
           <li><a href="">Sobre</a></li> 
@@ -16,9 +17,57 @@
     </nav>
     <section>
         <article>
-            <h2>Fatos sobre o Stomatopoda</h2>
-            <p>Stomatopoda (<em>Odontodactylus scyllarus</em>), chamados popularmente de tamarutacas ou de lacraias-do-mar no Brasil, é uma ordem de crustáceos marinhos da subclasse Hoplocarida, que agrupa cerca de 400 espécies, caracterizadas principalmente pela morfologia da segunda pata torácica, que é modificada em apêndice subquelado, lembrando uma pata de louva-a-deus.</p>
+          <h2>Classificação científica:</h2>
+          <table>
+            <tr>
+              <td>Reino</td>
+              <td>Filo</td>
+              <td>Subfilo</td>
+              <td>Classe</td>
+              <td>Subclasse</td>
+              <td>Ordem</td>
+            </tr>
+            <tr>
+              <td>Animalia</td>
+              <td>Arthropoda</td>
+              <td>Crustacea</td>
+              <td>Malacostraca</td>
+              <td>Hoplocarida</td>
+              <td>Stomatopoda</td>
+            </tr>              
+          </table>
+          <h2>Fatos sobre o Stomatopoda:</h2>
+          <p>Stomatopoda (<em>Odontodactylus scyllarus</em>), chamados popularmente de tamarutacas ou de lacraias-do-mar no Brasil, é uma ordem de crustáceos marinhos da subclasse Hoplocarida, que agrupa cerca de 400 espécies, caracterizadas principalmente pela morfologia da segunda pata torácica, que é modificada em apêndice subquelado, lembrando uma pata de louva-a-deus.</p>
+          <section>
+            <h3>Variação de tamanho:</h3>
+            <img src ="tamanho.jpg" alt="Tamanho da Stomatopoda" width="350px" class = "text-images">
+            <p>Apresentam uma grande variação de tamanho, que pode ir <b>de poucos milímetros até aproximadamente 40 cm</b> nas espécies maiores.</p>
+          </section>
+          <section>
+            <h3>Lagosta boxeadora:</h3>
+            <img src ="punch.jpg" alt="Soco da Stomatopoda" width="350px" class = "text-images">
+            <p>São capazes de desferir um dos mais rápidos e violentos golpes do reino animal, um soco que pode apresentar <b>velocidade de um tiro calibre .22</b> (equivalente a 720km/h) e uma força de <b>impacto de 60 kg/cm²</b>. Essa força esmagadora é a responsável pelo seu título de "lagosta-boxeadora" e é capaz de facilmente quebrar a carapaça de um caranguejo, as conchas duras e calcificadas de gastrópodes ou até mesmo quebrar o vidro reforçado de um aquário.</p>
+          </section>
+          <section>
+            <h3>Capacidade visual:</h3>
+            <img src ="vision.jpg" alt="Visão da Stomatopoda" width="350px" class = "text-images">
+            <p>Esses animais possuem o <b>mais complexo sistema de visão de cores do mundo animal</b>, pois enxergam 12 cores primárias, correspondentes aos 12 pigmentos distintos presentes em sua retina.</br>
+            Nossos olhos possuem três tipos desses receptores - que correspondem à luz azul, verde e vermelha -, que nos permitem perceber o espectro de cores que vemos. Os cães contam com apenas dois tipos de cones (verde e azul), e é por isso que eles vêm tons de azul, verde e um pouco de amarelo. Muitos anfíbios, répteis, aves e insetos possuem quatro tipo de cones, o que significa que espécies dessas classes conseguem ver cores que o nosso cérebro é incapaz de processar. Algumas espécies específicas de borboletas e possivelmente pombos possuem cinco cones de percepção de cor, o que aumenta ainda mais a quantidade de pigmentos que eles são capazes de perceber. O sistema de visão dos estomatópodes possui doze cones sensíveis à luz e outros quatro que filtram a luz (16 cones no total), o que lhes permite ver cores polarizadas e imagens multiespectrais.</p>
+          </section>
+          <section>
+            <h2>O Stomatopoda na natureza:</h3>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/E0Li1k5hGBE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </section>
+          <section>
+            <h2>Referências bibliográficas:</h2>
+              <a href="https://pt.wikipedia.org/wiki/Stomatopoda">Wikipedia</a>
+          </section>
+
         </article>
+
 </section>
   </body>
+  <footer>
+    Conteúdo compilado por Jean Vitor Pacheco, 2021.
+  </footer>
 </html>
